<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_cadastro_tarefa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.connectask.activity.Fragments.CadastroTarefaFragment">


<!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTe"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/titulo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="0dp"
                android:layout_height="@dimen/tamanhoEditTextFormulario"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/digiteTitulo"
                android:inputType="textPersonName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTe" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tipo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

            <Spinner
                android:id="@+id/spinnerTipo"
                android:layout_width="0dp"
                android:layout_height="@dimen/tamanhoEditTextFormulario"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/descricao"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.326"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerTipo" />

            <EditText
                android:id="@+id/editTextDescricao"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/digiteDescricao"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tempo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescricao" />

            <EditText
                android:id="@+id/editTextTempo"
                android:layout_width="0dp"
                android:layout_height="@dimen/tamanhoEditTextFormulario"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/digiteTempo"
                android:inputType="time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/valor"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTempo" />

            <EditText
                android:id="@+id/editTextValor"
                android:layout_width="0dp"
                android:layout_height="@dimen/tamanhoEditTextFormulario"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/digiteValor"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/endereco"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.326"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextValor" />

            <Spinner
                android:id="@+id/spinnerEndereco"
                android:layout_width="0dp"
                android:layout_height="@dimen/tamanhoEditTextFormulario"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/buttonNovoEndereco"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <Button
                android:id="@+id/buttonNovoEndereco"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/cor_principal"
                android:padding="10dp"
                android:text="@string/novoEndereco"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerEndereco"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinnerEndereco" />

            <Button
                android:id="@+id/buttonFinalizar"
                android:layout_width="0dp"
                android:layout_height="@dimen/botaoFormulario"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="27dp"
                android:background="@color/cor_principal"
                android:text="@string/cadastrar"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/TextoBotaoFormulario"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerEndereco"
                />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</FrameLayout>
