<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.connectask.activity.activity.Login"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_marginTop="24dp"
            android:text="@string/connectask"
            android:textColor="@color/azul"
            android:textSize="@dimen/texto_titulo"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginLeft="41dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tamanhoTextFormaularios"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRua"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/textViewNome2"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginLeft="41dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/nome"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tamanhoTextFormaularios"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/textViewSenha"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginLeft="41dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/senha"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tamanhoTextFormaularios"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/editTextRua"
            android:layout_width="0dp"
            android:layout_height="@dimen/tamanhoEditTextFormulario"
            android:layout_marginLeft="39dp"
            android:layout_marginRight="39dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/digiteNome"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNome2" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="@dimen/tamanhoEditTextFormulario"
            android:layout_marginLeft="39dp"
            android:layout_marginRight="39dp"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:hint="@string/digiteEmail"
            app:layout_constraintHorizontal_bias="0.387"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNome"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="0dp"
            android:layout_height="@dimen/tamanhoEditTextFormulario"
            android:layout_marginLeft="39dp"
            android:layout_marginRight="39dp"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:hint="@string/digiteSenha"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSenha"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/buttonFinalizar"
            android:layout_width="0dp"
            android:layout_height="@dimen/botaoFormulario"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="27dp"
            android:background="@color/cor_principal"
            android:text="@string/cadastrar"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/TextoBotaoFormulario"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSenha" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>