<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.connectask.activity.Fragments.CadastroEndereco">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="Estado"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCep" />

            <Spinner
                android:id="@+id/spinnerEstado"
                android:layout_width="180dp"
                android:layout_height="@dimen/tamanhoEditTextFormulario"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="Cidade"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerEstado" />

            <EditText
                android:id="@+id/editTextCidade"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="Digite a sua Cidade"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textViewTe"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/cep"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextCep"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/digiteCep"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTe" />

            <TextView
                android:id="@+id/textView102"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/rua"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintHorizontal_bias="0.281"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCidade" />

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="0dp"
                android:layout_height="76dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/digiteRua"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView102" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/numero"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

            <EditText
                android:id="@+id/editTextNumero"
                android:layout_width="0dp"
                android:layout_height="@dimen/tamanhoEditTextFormulario"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/digiteNumero"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/editTextBairro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginEnd="16dp"
                android:text="@string/bairro"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editTextBairro" />

            <EditText
                android:id="@+id/editTextBairro"
                android:layout_width="0dp"
                android:layout_height="@dimen/tamanhoEditTextFormulario"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/digiteBairro"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNumero"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editTextNumero"
                app:layout_constraintTop_toTopOf="@+id/editTextNumero" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/complemento"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanhoTextFormaularios"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextBairro" />

            <EditText
                android:id="@+id/editTextComplemento"
                android:layout_width="0dp"
                android:layout_height="@dimen/tamanhoEditTextFormulario"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/digiteComplemento"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <Button
                android:id="@+id/buttonFinalizar"
                android:layout_width="0dp"
                android:layout_height="@dimen/botaoFormulario"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="27dp"
                android:background="@color/cor_principal"
                android:text="@string/cadastrar"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/TextoBotaoFormulario"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextComplemento" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</FrameLayout>
